# MoitraCrew

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/moitracrew/: crew.py  flow.py  main.py  models.py
src/moitracrew/config/: agents.yaml  tasks.yaml
src/moitracrew/output/: .last_run.json  00_repo_analysis.md  01_user_stories.md  02_architecture.md  05_github_issue.md
src/moitracrew/tools/: github_tools.py  github_write_tools.py  test_tools.py
